--- a/cleaning-philadelphia.html
+++ b/cleaning-philadelphia.html
@@ -109,7 +109,7 @@
    <!-- Header -->
    <header class="bg-white shadow-sm sticky top-0 z-50">
       <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
-         <a href="https://www.phillyhomepros.com" class="text-2xl font-bold text-blue-800">Philly Home Pros</a>
+         <a href="./index.html" class="text-2xl font-bold text-blue-800">Philly Home Pros</a>
          <div class="flex items-center space-x-4">
             <a href="#services" class="text-gray-600 hover:text-blue-600">Services</a>
             <a href="#contact" class="text-gray-600 hover:text-blue-600">Contact</a>
@@ -130,7 +130,6 @@
                <h1 class="text-4xl md:text-6xl font-extrabold leading-tight mb-6">A Cleaner, Healthier Home is Just a Click Away</h1>
                <p class="text-lg md:text-xl mb-8">Philadelphia's trusted, reliable, and eco-friendly house cleaning service.</p>
 
-               <!-- Lead Capture Form & CTA -->
                <div class="bg-white/10 backdrop-blur-sm p-6 md:p-8 rounded-2xl max-w-3xl mx-auto border border-white/20">
                   <form action="#" method="POST" class="grid grid-cols-1 md:grid-cols-3 gap-4 items-center">
                      <input type="text" placeholder="Square Footage" class="col-span-1 p-3 rounded-lg text-gray-800 focus:ring-2 focus:ring-yellow-400 focus:outline-none" required>
@@ -148,7 +147,6 @@
                   <p class="mt-4 text-sm text-yellow-200">Or call us to book: <a href="tel:215-555-0100" class="font-bold underline">(215) 555-0100</a></p>
                </div>
 
-               <!-- Trust Signals -->
                <div class="mt-12 grid grid-cols-1 sm:grid-cols-3 gap-6 text-center">
                   <div class="bg-white/10 p-4 rounded-lg border border-white/20">
                      <i class="fa-solid fa-shield-halved text-yellow-400 text-3xl mb-2"></i>
@@ -167,7 +165,6 @@
          </div>
       </section>
 
-      <!-- Introduction -->
       <section class="py-16 md:py-24 bg-white">
          <div class="container mx-auto px-6 text-center max-w-3xl">
             <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">Reclaim Your Time. Let Us Handle the Cleaning.</h2>
@@ -177,7 +174,6 @@
          </div>
       </section>
 
-      <!-- Services Section -->
       <section id="services" class="py-16 md:py-24 bg-gray-100">
          <div class="container mx-auto px-6">
             <div class="text-center max-w-3xl mx-auto mb-12">
@@ -212,7 +208,6 @@
          </div>
       </section>
 
-      <!-- Why Choose Us / E-E-A-T Section -->
       <section class="py-16 md:py-24 bg-white">
          <div class="container mx-auto px-6">
             <div class="text-center max-w-3xl mx-auto mb-12">
@@ -235,52 +230,30 @@
                   </div>
                </div>
                <div class="space-y-8">
-                  <!-- Testimonial -->
                   <div class="bg-blue-50 border-l-4 border-blue-500 p-6 rounded-r-lg shadow-sm">
                      <p class="text-gray-700 italic text-lg">"Philly Home Pros is a lifesaver! They are so reliable and do an amazing job every time. Coming home from work to a spotless house is the best feeling. So glad I found them!"</p>
                      <p class="text-right font-bold text-gray-800 mt-4">- Sarah D., Fishtown</p>
                   </div>
-                  <!-- E-E-A-T Signal: Checklist -->
-                  <div class="bg-gray-100 p-6 rounded-lg shadow-sm text-center">
-                     <i class="fa-solid fa-list-check text-blue-600 text-4xl mb-3"></i>
-                     <h4 class="font-bold text-gray-800 mb-2">Demonstrating Our Expertise</h4>
-                     <p class="text-gray-600 text-sm mb-4">Our thorough process ensures a perfect clean every time. See the difference for yourself.</p>
-                     <a href="#" class="bg-blue-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-blue-700 transition duration-300">Download Our Cleaning Checklist</a>
-                  </div>
                </div>
             </div>
          </div>
       </section>
 
-      <!-- How It Works Section -->
+      <!-- Lead Magnet Section -->
+      <section class="py-16 md:py-20 bg-green-50">
+         <div class="container mx-auto px-6 text-center">
+            <div class="max-w-3xl mx-auto">
+               <i class="fa-solid fa-wand-magic-sparkles text-5xl text-green-600 mb-4"></i>
+               <h2 class="text-3xl font-bold text-gray-900 mb-3">Clean Like a Pro. Every Time.</h2>
+               <p class="text-lg text-gray-600 mb-8">Want to keep your home sparkling between professional cleanings? Download our ultimate room-by-room checklist, the same one our pros use to guarantee a perfect clean.</p>
+               <a href="./cleaning_checklist.html" target="_blank" class="bg-green-600 text-white font-bold py-4 px-8 rounded-lg text-lg hover:bg-green-700 transition duration-300 shadow-lg">
+                  <i class="fa-solid fa-download mr-2"></i>Download The Ultimate Checklist
+               </a>
+            </div>
+         </div>
+      </section>
+
       <section class="py-16 md:py-24 bg-gray-100">
-         <div class="container mx-auto px-6">
-            <div class="text-center max-w-3xl mx-auto mb-12">
-               <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">Our Simple 3-Step Booking Process</h2>
-               <p class="text-lg text-gray-600">Getting a sparkling clean home has never been easier.</p>
-            </div>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
-               <div class="p-6">
-                  <div class="bg-blue-600 text-white w-16 h-16 rounded-full flex items-center justify-center text-2xl font-bold mx-auto mb-4">1</div>
-                  <h3 class="text-xl font-bold mb-2">Get Your Free Instant Quote</h3>
-                  <p class="text-gray-600">Tell us about your home and schedule online or by phone in minutes.</p>
-               </div>
-               <div class="p-6">
-                  <div class="bg-blue-600 text-white w-16 h-16 rounded-full flex items-center justify-center text-2xl font-bold mx-auto mb-4">2</div>
-                  <h3 class="text-xl font-bold mb-2">We Make Your Home Sparkle</h3>
-                  <p class="text-gray-600">A trusted professional from our team will arrive on time and get to work.</p>
-               </div>
-               <div class="p-6">
-                  <div class="bg-blue-600 text-white w-16 h-16 rounded-full flex items-center justify-center text-2xl font-bold mx-auto mb-4">3</div>
-                  <h3 class="text-xl font-bold mb-2">Relax & Enjoy</h3>
-                  <p class="text-gray-600">You come home to a beautifully clean space and more free time.</p>
-               </div>
-            </div>
-         </div>
-      </section>
-
-      <!-- Service Area Section -->
-      <section class="py-16 md:py-24 bg-white">
          <div class="container mx-auto px-6">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
                <div>
@@ -298,7 +271,6 @@
                   </ul>
                </div>
                <div class="rounded-xl shadow-2xl overflow-hidden h-96">
-                  <!-- Google Map Embed -->
                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d195884.3294713583!2d-75.2802830340869!3d39.9955627103135!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6b7d8d4b543e1%3A0x6444af15516a243a!2sPhiladelphia%2C%20PA!5e0!3m2!1sen!2sus!4v1678886695105!5m2!1sen!2sus" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Map of Philadelphia service area">
                   </iframe>
                </div>
@@ -306,7 +278,6 @@
          </div>
       </section>
 
-      <!-- Final CTA Section -->
       <section id="contact" class="py-16 md:py-24 bg-blue-800 text-white">
          <div class="container mx-auto px-6 text-center">
             <h2 class="text-3xl md:text-4xl font-bold mb-4">Get Your Free Cleaning Quote Today!</h2>
@@ -366,8 +337,7 @@
          <p>© 2024 Philly Home Pros Home Services. All Rights Reserved.</p>
          <p class="text-sm mt-2">Fully Insured & Bonded | 100% Satisfaction Guarantee</p>
          <div class="mt-4">
-            <!-- Internal Linking -->
-            <a href="https://www.phillyhomepros.com" class="px-2 hover:text-white">Home Services Hub</a> |
+            <a href="./index.html" class="px-2 hover:text-white">Home Services Hub</a> |
             <a href="#" class="px-2 hover:text-white">About Us</a> |
             <a href="#" class="px-2 hover:text-white">FAQ</a>
          </div>
